Use MAVEN_OPTS to allow access to private field
Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>